--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "start": "live-server --port=8080"
   },
-  "devDependencies": {
-    "live-server": "^1.2.0"
-  },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "live-server": "^1.2.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
+  }
 }
