Mark the project private to avoid accidental publishing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cube-demo",
   "description": "cube-demo.",
+  "private": true,
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
