Enable hot reload with a-frame support
A-frame specific hot reload support:

```bash
yarn add aframe-super-hot-loader aframe-super-hot-html-loader diff-dom
```

The sources had to be restructured for hot reloading to work properly:
the scene is extracted into its own html and required into the index.js
which in turn injects it into the page.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "keywords": [],
   "dependencies": {
+    "aframe-super-hot-html-loader": "^2.1.0",
+    "aframe-super-hot-loader": "^1.7.0",
+    "diff-dom": "^4.1.6",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
