--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   },
   "keywords": [],
   "dependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "aframe-super-hot-html-loader": "^2.1.0",
     "aframe-super-hot-loader": "^1.7.0",
+    "babel-loader": "^8.0.6",
     "diff-dom": "^4.1.6",
+    "pug": "^2.0.4",
+    "pug-html-loader": "^1.1.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
